# mySTLviewer

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
examples/: quickpipe.xml
shaders/: fragment.glsl  normals.frag  normals.vert  solid.geom  vertex.glsl  wireframe.frag
src/: ConsoleProgress.cpp  ConsoleProgress.h  MacMenu.h  MacMenu.mm  Mesh.h  Progress_abstract.h  Renderer.cpp  Renderer.h  STLLoader.cpp  STLLoader.h  XMLLoader.cpp  XMLLoader.h  main.cpp
src/progress/: ConsoleProgress.cpp  ConsoleProgress.h  Progress_abstract.h
